# ml-project-template

./: .gitignore  main.py  makefile  pyproject.toml  readme.md  requirements.txt  setup.py  test_gpu.py
.copilot/: copilot-instructions.md
.github/workflows/: ci.yml
configs/: base.yaml  dev.yaml  dl.yaml  ml.yaml  prod.yaml
data/processed/: data.csv
src/: pipeline.py
src/data/: loader.py  preprocessor.py
src/features/: engineering.py
src/ml_project_template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/models/: evaluate.py  train.py
src/models/DL/: __init__.py  model.py  train.py
src/models/ML/: __init__.py  train.py
src/utils/: config.py  device.py  logger.py
tests/: test_data.py  test_model.py
